# the-watch-project

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig.defaults
components/espressif__esp_lvgl_port/: idf_component.yml
components/lvgl__lvgl/src/: lv_conf_internal.h  lv_conf_kconfig.h
components/lvgl__lvgl/src/font/: ds_digi.c
main/: CMakeLists.txt  apps.cpp  apps.h  ds3231.c  ds3231.h  fonts.h  grid.cpp  grid.h  idf_component.yml  input_event_types.h  input_manager.h  isrs.h  main.c  main.cpp  widget_manager.h  widgets.cpp  widgets.h
main/core/include/: config.h  input_event_types.h  isrs.h  setup.h  widget_manager.h
main/core/src/: isrs.c  isrs.cpp  setup.c  setup.cpp  widget_manager.c  widget_manager.cpp
main/ds3231/: ds3231.h
main/fonts/: font10x20.h  font9x18B.h  test_font.h
main/sensor_drivers/ds3231/: ds3231.c
main/sensor_drivers/max30102/: config_internal.h  max30102.c  max30102.h  max30102_configs.h  max30102_types.h
main/widgets/: clock.cpp  info_bar.cpp  snake.cpp  widget_utils.h  widgets.cpp  widgets.h
main/widgets/grid/: grid.cpp  grid.h
main/widgets/include/: clock.h  clock_widget.h  fonts.h  info_bar_widget.h  menu.h  new_clock.h  snake_widget.h  test_widget.h  widget.h  widget_utils.h  widgets.h
main/widgets/src/: clock.c  clock.cpp  digital-7_mono.c  fonts.c  info_bar.cpp  snake.cpp  test_widget.cpp  widgets.cpp
